@@ -22,13 +22,14 @@ List<String> currencyCodesSorted() {
 
 final List<Country> countryList = [
   Country(
-      name: "Andorra",
-      isoCode: "AD",
-      iso3Code: "AND",
-      phoneCode: "376",
-      currencyCode: "EUR",
-      currencyName: "Euro",
-      continent: 'Europe'),
+    name: "Andorra",
+    isoCode: "AD",
+    iso3Code: "AND",
+    phoneCode: "376",
+    currencyCode: "EUR",
+    currencyName: "Euro",
+    continent: 'Europe',
+  ),
   Country(
     name: "United Arab Emirates",
     isoCode: "AE",
@@ -48,21 +49,23 @@ final List<Country> countryList = [
     continent: 'Asia',
   ),
   Country(
-      name: "Antigua and Barbuda",
-      isoCode: "AG",
-      iso3Code: "ATG",
-      phoneCode: "1-268",
-      currencyCode: "XCD",
-      currencyName: "East Caribbean dollar",
-      continent: 'North America'),
+    name: "Antigua and Barbuda",
+    isoCode: "AG",
+    iso3Code: "ATG",
+    phoneCode: "1-268",
+    currencyCode: "XCD",
+    currencyName: "East Caribbean dollar",
+    continent: 'North America',
+  ),
   Country(
-      name: "Anguilla",
-      isoCode: "AI",
-      iso3Code: "AIA",
-      phoneCode: "1-264",
-      currencyCode: "XCD",
-      currencyName: "East Caribbean dollar",
-      continent: 'North America'),
+    name: "Anguilla",
+    isoCode: "AI",
+    iso3Code: "AIA",
+    phoneCode: "1-264",
+    currencyCode: "XCD",
+    currencyName: "East Caribbean dollar",
+    continent: 'North America',
+  ),
   Country(
     name: "Albania",
     isoCode: "AL",
@@ -423,54 +426,61 @@ final List<Country> countryList = [
     currencyName: "Colombian peso",
   ),
   Country(
-      name: "Costa Rica",
-      isoCode: "CR",
-      iso3Code: "CRI",
-      phoneCode: "506",
-      currencyCode: "CRC",
-      currencyName: "Costa Rican colón"),
+    name: "Costa Rica",
+    isoCode: "CR",
+    iso3Code: "CRI",
+    phoneCode: "506",
+    currencyCode: "CRC",
+    currencyName: "Costa Rican colón",
+  ),
   Country(
-      name: "Cuba",
-      isoCode: "CU",
-      iso3Code: "CUB",
-      phoneCode: "53",
-      currencyCode: "CUC",
-      currencyName: "Cuban convertible peso"),
+    name: "Cuba",
+    isoCode: "CU",
+    iso3Code: "CUB",
+    phoneCode: "53",
+    currencyCode: "CUC",
+    currencyName: "Cuban convertible peso",
+  ),
   Country(
-      name: "Cape Verde",
-      isoCode: "CV",
-      iso3Code: "CPV",
-      phoneCode: "238",
-      currencyCode: "CVE",
-      currencyName: "Cape Verdean escudo"),
+    name: "Cape Verde",
+    isoCode: "CV",
+    iso3Code: "CPV",
+    phoneCode: "238",
+    currencyCode: "CVE",
+    currencyName: "Cape Verdean escudo",
+  ),
   Country(
-      name: "Curaçao",
-      isoCode: "CW",
-      iso3Code: "CUW",
-      phoneCode: "599",
-      currencyCode: "ANG",
-      currencyName: "Netherlands Antillean guilder"),
+    name: "Curaçao",
+    isoCode: "CW",
+    iso3Code: "CUW",
+    phoneCode: "599",
+    currencyCode: "ANG",
+    currencyName: "Netherlands Antillean guilder",
+  ),
   Country(
-      name: "Christmas Island",
-      isoCode: "CX",
-      iso3Code: "CXR",
-      phoneCode: "61",
-      currencyCode: "AUD",
-      currencyName: "Australian dollar"),
+    name: "Christmas Island",
+    isoCode: "CX",
+    iso3Code: "CXR",
+    phoneCode: "61",
+    currencyCode: "AUD",
+    currencyName: "Australian dollar",
+  ),
   Country(
-      name: "Cyprus",
-      isoCode: "CY",
-      iso3Code: "CYP",
-      phoneCode: "357",
-      currencyCode: "EUR",
-      currencyName: "Euro"),
+    name: "Cyprus",
+    isoCode: "CY",
+    iso3Code: "CYP",
+    phoneCode: "357",
+    currencyCode: "EUR",
+    currencyName: "Euro",
+  ),
   Country(
-      name: "Czech Republic",
-      isoCode: "CZ",
-      iso3Code: "CZE",
-      phoneCode: "420",
-      currencyCode: "CZK",
-      currencyName: "Czech koruna"),
+    name: "Czech Republic",
+    isoCode: "CZ",
+    iso3Code: "CZE",
+    phoneCode: "420",
+    currencyCode: "CZK",
+    currencyName: "Czech koruna",
+  ),
   Country(
       name: "Germany",
       isoCode: "DE",
